// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders at size lg 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 96,
        "width": 96,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        false,
        {
          "borderRadius": 48,
        },
      ]
    }
  >
    <View
      accessibilityRole="image"
      height={96}
      width={96}
    />
  </View>
</View>
`;

exports[`Avatar renders at size md 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 64,
        "width": 64,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        false,
        {
          "borderRadius": 32,
        },
      ]
    }
  >
    <View
      accessibilityRole="image"
      height={64}
      width={64}
    />
  </View>
</View>
`;

exports[`Avatar renders at size sm 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
      {
        "height": 40,
        "width": 40,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        false,
        {
          "borderRadius": 20,
        },
      ]
    }
  >
    <View
      accessibilityRole="image"
      height={40}
      width={40}
    />
  </View>
</View>
`;
